# autocrud

./: README.md  pyproject.toml  run_tests.py
autocrud/: __init__.py  cli.py  config.py  generator.py  security.py  utils.py
examples/: autocrud.yml
examples/demo_app/: main.py  models.py
tests/: test_app.py
